syntax = "proto3";

package auth;

option go_package = "./proto";

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
  rpc AddUser(AddUserRequest) returns (AddUserResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  string username = 2;
  string role = 3;
}

message AddUserRequest {
  string username = 1;
  string password = 2;
  string role = 3;
}

message AddUserResponse {
  bool success = 1;
  string message = 2;
}